--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Jamroom Loading</title>
 <link rel="icon" href="/img/iconojam.png" type="img">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -25,7 +25,8 @@
 
 </div>
 
-<script type="module" src="/js/script.js"></script>
+<script type="module" src="js/script.js"></script>
 
 </body>
 </html>
+
