--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Jamroom Loading</title>
-<link rel="icon" href="/img/iconojam.png" type="img">
+<link rel="icon" href="img/iconojam.png" type="img">
 <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -16,7 +16,7 @@
   <div class="notes-layer"></div>
 
   <div class="arm">
-    <img src="/img/iconojam.png" class="logo">
+    <img src="img/iconojam.png" class="logo">
   </div>
 
     <div class="loading-text">
@@ -29,4 +29,5 @@
 
 </body>
 </html>
+
 
